[package]
name = "earthstar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.3"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
miette = { version = "5.6.0", features = ["fancy"] }
rand = "^0.7"
sha2 = "0.10.6"
thiserror = "1.0.40"
